# brenda_references

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  config.toml  pyproject.toml
docs/source/: brenda_references.rst  conf.py  index.rst  log.rst  modules.rst  ncbi.rst
scripts/: augment_training_data.py  create_test_docdb.py  fix_missing_strains.py  fix_pubmed_ids.py  fix_taxonomy.py  generate_dataset.py  preannotate.py  retrieve_text.py  statistics.py  update_pmc_open.py
src/: db.py
src/brenda_references/: __init__.py  __main__.py  brenda_references.py  brenda_types.py  config.py  dataset.py  db.py  docdb.py  lpsn_interface.py  pydantic_frozendict.py  queries.py  sampling.py  straininfo.py  types.py
src/brenda_references/data/: training_data.csv
src/brenda_references/utils/: __init__.py  utils.py
src/brenda_types/: __init__.py  brenda_types.py
src/debug/: __init__.py  __main__.py
src/log/: __init__.py  log.py
src/lpsn_interface/: __init__.py  lpsn_interface.py
src/ncbi/: __init__.py  __main__.py  ncbi.py  parser.py
src/scripts/: fix_missing_strains.py  generate_entity_names_dataset.py  generate_json_schemas.py  preannotate.py  preannotate_hmm.py  retrieve_abstracts.py  update_pmc_open.py
src/utils/: __init__.py  __main__.py  utils.py
tests/: test_annotation.py  test_apis.py  test_docdb.py  test_preprocessing.py  test_sampling.py  test_straininfo.py  test_taxonomy.py  test_types.py
tests/test_files/: 3170582.json  3170592.json  testdb.json
